--- a/_posts/2016-10-09-seminar.md
+++ b/_posts/2016-10-09-seminar.md
@@ -4,7 +4,7 @@ title: group seminar
 date: 2016-10-09 00:18:23
 categories: ruby
 short_description: semantic segmentation,pose estimation,flow.
-image_preview: https://avatars2.githubusercontent.com/u/4660275?v=3&s=460
+image_preview: /images/post1.jpg
 ---
 
 ### Wei Zhen(魏震):
@@ -12,19 +12,15 @@ image_preview: https://avatars2.githubusercontent.com/u/4660275?v=3&s=460
 1. [Region-based semantic segmentation with end-to-end training](https://arxiv.org/abs/1607.07671).
 by Holger Caesar, Jasper Uijlings, Vittorio Ferrari in ECCV 16.
 2. [SPDA-CNN-Unifying Semantic Part Detection and Abstraction for Fine-grained Recognition](https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&ved=0ahUKEwiIo5zl9tLPAhVJ74MKHYP7CroQFggeMAA&url=http%3A%2F%2Fpaul.rutgers.edu%2F~hz138%2Fpublications%2FCVPR16.pdf&usg=AFQjCNGm3K24qSZQiRV3Xq6ntuwyKxL9rA&sig2=WS0K3_ozrzsr0IQqFCuRkw).
-by Han Zhang, Tao Xu, Mohamed Elhoseiny,Xiaolei Huang,Shaoting Zhang, Ahmed Elgammal, Dimitris Metaxas in CVPR 16.[[Slide(ppt)](https://sites.google.com/site/fashionparsing/home)]
+by Han Zhang, Tao Xu, Mohamed Elhoseiny,Xiaolei Huang,Shaoting Zhang, Ahmed Elgammal, Dimitris Metaxas in CVPR 16.[[Slide(ppt)](https://pan.baidu.com/s/1hsx5VCC)]
 
 
 ### Ruihe Qian(钱瑞和):
 
 1. [ViewSynthesis by Appearance Flow](https://arxiv.org/abs/1605.03557).
-by Tinghui Zhou, Shubham Tulsiani, Weilun Sun, Jitendra Malik, Alexei A. Efros in CVPR 16.
-
-[[Slide(ppt)](https://sites.google.com/site/fashionparsing/home)]
+by Tinghui Zhou, Shubham Tulsiani, Weilun Sun, Jitendra Malik, Alexei A. Efros in CVPR 16.[[Slide(ppt)](https://pan.baidu.com/s/1nuFw0ch)]
 
 ### Jiajun Gao(高佳俊)
 
-[Multi-Person Pose Estimation with Local Joint-to-Person Associations](https://arxiv.org/abs/1608.08526).
-by Umar lqbal and Juergen Gall in ECCV 16
-
-[[Slide(ppt)](https://sites.google.com/site/fashionparsing/home)]
+1. [Multi-Person Pose Estimation with Local Joint-to-Person Associations](https://arxiv.org/abs/1608.08526).
+by Umar lqbal and Juergen Gall in ECCV 16.[[Slide(ppt)](https://pan.baidu.com/s/1jH9wRlW)]
